<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        tools:text="15 de abril del 2020"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_confirmed_cases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/confirmed_cases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/title_confirmed_cases"
        app:layout_constraintEnd_toStartOf="@+id/title_confirmed_cases"
        app:layout_constraintTop_toTopOf="@+id/title_confirmed_cases"
        app:srcCompat="@drawable/bullet"
        android:contentDescription="@string/bullet" />

    <TextView
        android:id="@+id/title_number_of_deceased_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/number_of_deceased_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_confirmed_cases" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/title_number_of_deceased_people"
        app:layout_constraintEnd_toStartOf="@+id/title_number_of_deceased_people"
        app:layout_constraintTop_toTopOf="@+id/title_number_of_deceased_people"
        app:srcCompat="@drawable/bullet"
        android:contentDescription="@string/bullet" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="96dp"
        android:contentDescription="@string/image_to_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_number_of_deceased_people"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/btn_select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:srcCompat="@drawable/button_select_date"
        android:contentDescription="@string/button_for_select_new_date" />

    <TextView
        android:id="@+id/case_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_medium"
        tools:text="1312312"
        app:layout_constraintBottom_toBottomOf="@+id/title_confirmed_cases"
        app:layout_constraintStart_toEndOf="@+id/title_confirmed_cases"
        app:layout_constraintTop_toTopOf="@+id/title_confirmed_cases" />

    <TextView
        android:id="@+id/decesed_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_medium"
        tools:text="1432412"
        app:layout_constraintBottom_toBottomOf="@+id/title_number_of_deceased_people"
        app:layout_constraintStart_toEndOf="@+id/title_number_of_deceased_people"
        app:layout_constraintTop_toTopOf="@+id/title_number_of_deceased_people" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>